Fixed up some of the more confusing parts like talking to characters twice, invisible exits, and talking to Tom being the only way to the pharmacy

--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,8 @@ body {
 	}
 
 	.message-box.message-box_dialog-box .message {
+		box-sizing:border-box;
+		-moz-box-sizing:border-box;
 		color: black;
 	}
 
